# voice-agent

./: .env.example  .gitignore  config.py  docker-compose.yaml  main.py  pyproject.toml  render.yaml  skills-lock.json
.mimocode/: .cron-lock
.mimocode/plans/: 1784211987820-stellar-engine.md  1784291700099-calm-orchid.md  1784439419403-proud-engine.md
backend/: api.py
bots/: __init__.py  finance.py  healthcare.py  jira.py  legal.py  travel.py
core/: __init__.py  browser_transport.py  ingestion.py  pipeline.py  retrieval.py  transport.py
db/: session.py
doc/: ARCHITECTURE.md  PRD.md  SCHEMA.md  SPRINT.md  WORK_LEFT.md
doc/solutions/: SPRINT-3.5.md  sprint3_streaming.md  sprint_1_groq_cortesia.md  sprint_2_healthcare.md  sprint_4_rest_bots.md  tools_python_package.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: audio-processor.js
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: Architecture.tsx  BotCard.tsx  MetricsPanel.tsx  StatusBar.tsx  VoiceAgent.tsx
frontend/src/hooks/: useAudio.ts  useWebSocket.ts
providers/: base.py  cartesia.py  groq.py  jina.py  openai.py  registry.py
scripts/: test_cartesia_tts.py  test_groq_stt.py  test_stream.py
