[project]
name = "voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartesia>=3.3.0",
    "groq>=1.5.0",
    "openai>=2.45.0",
    "pgvector>=0.5.0",
    "pipecat-ai[cartesia,groq]>=1.5.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-ai>=2.10.0",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.0",
]
